<resources>

    <string name="message_to_user">
        Halp! wasn\'t able to sign you in. Are you sure you have an internet connection?
    </string>

    <string name="disclaimer">
        This information will not be shared with any entity or person. This information is just for your profile and it will be securely stored.
    </string>
    <string name="school_name_hint">Write your school name</string>
    <string name="grade_hint">Write the grade you\'re in (Optional)</string>
    <string name="carrer_hint">Write the carreer you\'re in (if any (Optional))</string>
    <string name="birth_day_hint">Add your birthday (Optional)</string>
    <string name="error_message">This field cannot be left blank</string>
    <string name="of"> of </string>
    <string name="done">Done</string>

    <string name="app_name">Halp!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="agenda">Agenda</string>
    <string name="assignments">Assignments</string>
    <string name="flash">Flash Cards</string>
    <string name="settings">Settings</string>

    <string name="pref_change_style">Change Style</string>
    <string name="pref_change_style_summ">
        Choose how you\'d like to see Halp!</string>
    <string name="pref_log_out">Log Out</string>
    <string name="pref_log_summ">Log Out of Halp!</string>
    <string name="pref_color_inv">Inverse Colors</string>
    <string name="pref_color_norm">Normal Colors</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addTaskName">Insert Task Name</string>
    <string name="addTaskDuedate">Insert Task Duedate:</string>
    <string name="addTaskClass">Insert Task Class</string>

    <string name="addClassName">Insert Class Name</string>
    <string name="addClassRoom">Insert Class Room</string>
    <string name="addClassTeacher">Insert Class Teacher</string>
    <string name="addClassTime">Insert Class Time:</string>

</resources>
