<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAddClass"
    android:orientation="vertical">

    <EditText
        android:id="@+id/addClassName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:hint="@string/addClassName"/>
    <EditText
        android:id="@+id/addClassRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:hint="@string/addClassRoom"/>
    <EditText
        android:id="@+id/addClassTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:hint="@string/addClassTeacher"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addClassTime"
        android:paddingTop="25dp"/>

    <TimePicker
        android:id="@+id/addClassTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"/>

    <Button
        android:id="@+id/add_class_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="SAVE"
        />



</LinearLayout>