<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAddTask"
    android:orientation="vertical">

    <EditText
        android:id="@+id/addTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:hint="@string/addTaskName"/>
    <EditText
        android:id="@+id/addTaskClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:hint="@string/addTaskClass"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTaskDuedate"
        android:paddingTop="25dp"/>
    <DatePicker
        android:id="@+id/addTaskDuedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="SAVE"
        />



</LinearLayout>